Add support for more elements

--- a/index.html
+++ b/index.html
@@ -541,3 +541,20 @@
     </figure>
   </body>
 </html>
+
+<!-- <figure>
+  <line-drawing style="--line-drawing-duration: 2s">
+    <svg width="1000" height="1000" viewBox="0 0 100 100">
+      <g fill="none" stroke="#000">
+        <circle cx="10" cy="10" r="5" />
+        <rect x="20" y="5" width="10" height="20" />
+        <line x1="35" x2="45" y1="5" y2="40" />
+        <polyline points="50,25 50,75 100,0" />
+        <polygon points="0,100 50,25 50,75 100,0" />
+        <ellipse cx="100" cy="50" rx="100" ry="50" />
+      </g>
+    </svg>
+  </line-drawing>
+
+  <figcaption>Handling different types of shapes.</figcaption>
+</figure> -->
